--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Jorge Rojas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0"
   }
 }
